compiler/testData/diagnostics/tests/annotations/NonAnnotationClass.fir.kt
class Foo

<!UNRESOLVED_REFERENCE!>@Foo<!> class Bar
